# todolist-rust

./: .gitignore  .gitmodules  Cargo.toml  README.md
compose/dev/: compose.yaml
container/dev/: compose.yaml
core/: Cargo.toml
core/src/: centre.rs  convert.rs  error.rs  generator.rs  lib.rs  manager.rs  model.rs  persistence.rs  repositories.rs  tests.rs
core/src/centre/: auth.rs  permission.rs  todo.rs
core/src/manager/: default.rs  geo.rs  mod.rs
core/src/model/: foreign.rs  geo.rs  mod.rs  permission.rs  todo.rs  user.rs
core/src/model/foreign/: arbitrary.rs  checkito.rs
core/src/model/todo/: foreign.rs
core/src/model/todo/foreign/: checkito.rs
core/src/model/user/: foreign.rs
core/src/model/user/foreign/: checkito.rs
core/src/persistence/: mod.rs
core/src/persistence/postgres/: mod.rs
core/src/repositories/: auth.rs  permission.rs  todo.rs
core/src/tests/: todo_centre.rs  todo_manager.rs  todo_permission.rs  todo_permission_centre.rs
ext/checkito/: Cargo.toml
ext/checkito/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m001_create_todo_table.rs  m002_create_todo_permission_table.rs  m20260306_235802_create_todo_table.rs
persistence/postgres/: Cargo.toml
persistence/postgres/src/: convert.rs  entities.rs  field.rs  geo.rs  lib.rs  tests.rs  todo.rs  todo_permission_repository.rs  todo_repository.rs
persistence/postgres/src/entities/: todo.rs  todo_permission.rs
persistence/postgres/src/tests/: containers.rs  todo.rs  todo_permission_repository.rs  todo_repository.rs
server/: Cargo.toml  build.rs  start-client
server/src/: auth.rs  config.rs  configuration.rs  convert.rs  lib.rs  main.rs  service.rs  start_tracing.rs
server/src/module/: manager.rs  mod.rs  repository.rs  security.rs  service.rs
server/src/modules/: managers.rs  mod.rs  persistence.rs
server/src/service/: mod.rs  todo.rs  todo_service.rs
server/src/services/: geo.rs  mod.rs
todolist_core/: Cargo.toml  build.rs
todolist_core/src/: lib.rs
todolist_server/: Cargo.toml
