[package]
name = "todolist-core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
checkito.workspace = true
futures.workspace = true
geo.workspace = true
log.workspace = true
mockall.workspace = true
orn.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
checkito_ext.path = "../ext/checkito"
tokio.workspace = true
