[package]
name = "todolist_server"
version = "0.1.0"
edition = "2024"

[dependencies]
todolist_core = {path = "../core"}
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "*" }
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", features = ["kv"] }
simple_logger = { version = "5.1.0" }
async-trait = "0.1.89"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }

[build-dependencies]
tonic-prost-build = "0.14.3"
