[package]
name = "todolist-server"
version = "0.1.0"
edition = "2024"

[dependencies]
todolist-core = { path = "../core" }
todolist-persistence-postgres = { path = "../persistence/postgres" }
migration = { path = "../migration" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "*" }
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
config = "0.15.19"
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", features = ["kv"] }
simple_logger = { version = "5.1.0" }
async-trait = "0.1.89"
sea-orm = { version = "2.0.0-rc", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
o2o = "0.5.4"
time = { version = "0.3.47" }

[build-dependencies]
tonic-prost-build = "0.14.3"
