[package]
name = "todolist-persistence-postgres"
version = "0.1.0"
edition = "2024"


[dependencies]
migration = { path = "../../migration" }
todolist-core = { path = "../../core" }
async-trait = { workspace = true }
sea-orm = { workspace = true }
time = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio = { workspace = true }
