[package]
name = "todolist-persistence-postgres"
version = "0.1.0"
edition = "2024"


[dependencies]
migration.path = "../../migration"
todolist-core.path = "../../core"
async-trait.workspace = true
futures.workspace = true
sea-orm.workspace = true
time.workspace = true
tracing.workspace = true
log.workspace = true

[dev-dependencies]
checkito_ext.path = "../../ext/checkito"
checkito.workspace = true
rand.workspace = true
rstest.workspace = true
testcontainers-modules = { workspace = true, features = ["postgres"] }
tokio.workspace = true
uuid.workspace = true
